# asv_rl

./: .gitignore  README.md  pyproject.toml
src/: config.py  env_images.ipynb  environment.py  gym_env.ipynb  test_env.py  test_trained_model.py  train.py  visualization.py
src/asv/: gym_env.ipynb
src/dynamics_plots/: plot_heading_rewards.py  plot_obstacle_heading_reward.py  plot_proximity_reward.py  plot_speed_curve.py  plot_speed_reward.py  plot_time_penalty.py  plot_turning_dynamics.py
src/my_gymnasium/: environment.py  environment_base.py  environment_obs.py  reward_functions.py  test_env.py  visualization.py
src/sac/: train.py
